# mini-fe2io

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: audio.rs  json_processor.rs  keybind.rs  main.rs
