[package]
name = "mini-fe2io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.*", features = ["full"] }
tokio-tungstenite = "0.19.*"
futures-util = "0.3.*"
url = "2.4.*"
serde = "1.0.*"
serde_json = "1.0.*"
rodio = "0.17.*"