[package]
name = "mini-fe2io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.*", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.*"
url = "2.4.*"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.105"
rodio = "0.17.1"
tempfile = "3.8.0"
reqwest = "0.11.20"
uuid = { version = "1.4.1", features = ["v4"] }