[package]
name = "mini-fe2io"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.*", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.*"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.105"
rodio = "0.17.1"
reqwest = "0.11.20"
anyhow = "1.0.96"
clap = {version = "4.5.31", features = ["derive"]}
device_query = "3.0.0"
dirs = "6.0.0"
random-string = "1.1.0"
